setting up css, header and container.

--- a/Blog HTML/blog.html
+++ b/Blog HTML/blog.html
@@ -4,35 +4,49 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Blog</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Blog</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="../CSS/blog.css">
+</head>
+
+<body>
+    <div>
+        <nav>
+            <ul class="header">
+                <li><a href="#">Subscribe</a></li>
+                <li class="blog-header">Blog Title</li>
+                <li><input type="Search"></li>
+            </ul>
+        </nav>
+    </div>
     <div class="container">
-        <div class="header">
-            <h1>Blog Title</h1>
-        </div>
-        <div class="Blogs blogOne">
+        <div class="blogs blogOne">
             First
         </div>
-        <div class="Blogs blogTwo">Second</div>
-        <div class="Blogs blogThree">
-            Third 
+        <div class="blogs blogTwo">
+            Second
         </div>
-        <div class="Blogs blogFour">
+        <div class="blogs blogThree">
+            Third
+        </div>
+        <div class="blogs blogFour">
             Fourth
         </div>
-        <div class="Blogs blogFive">
+        <div class="blogs blogFive">
             Fifth
         </div>
-        <div class="Blogs blogSix">
+        <div class="blogs blogSix">
             Sixth
         </div>
+        <div class="blogs footer">
+            <footer>Footer</footer>
+        </div>
     </div>
-    </body>
+</body>
+
 </html>
