--- a/Blog HTML/blog.html
+++ b/Blog HTML/blog.html
@@ -26,7 +26,10 @@
     </div>
     <div class="container">
         <div class="blogs blogOne">
-            First
+            <h4>Example</h4>
+            <h2 id="striking">Example Blog Post</h2>
+            <h5>Dec/2/2020</h5>
+            <p id="randomP">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo minus est nobis tempora perspiciatis, rem natus qui, laboriosam delectus nulla aliquid minima quasi? Dicta dignissimos nisi vel nemo optio qui?</p>
         </div>
         <div class="blogs blogTwo">
             Second
