adding content on all my blog post

--- a/Blog HTML/blog.html
+++ b/Blog HTML/blog.html
@@ -27,24 +27,39 @@
     <div class="container">
         <div class="blogs blogOne">
             <h4>Example</h4>
-            <h2 id="striking">Example Blog Post</h2>
+            <h2 class="striking">Example Blog Post</h2>
             <h5>Dec/2/2020</h5>
-            <p id="randomP">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo minus est nobis tempora perspiciatis, rem natus qui, laboriosam delectus nulla aliquid minima quasi? Dicta dignissimos nisi vel nemo optio qui?</p>
+            <p class="randomP">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo minus est nobis tempora perspiciatis, rem natus qui, laboriosam delectus nulla aliquid minima quasi? Dicta dignissimos nisi vel nemo optio qui?</p>
         </div>
         <div class="blogs blogTwo">
-            Second
+            <h4>Example</h4>
+            <h2 class="striking">Example Blog Post</h2>
+            <h5>Dec/2/2020</h5>
+            <p class="randomP">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo minus est nobis tempora perspiciatis, rem natus qui, laboriosam delectus nulla aliquid minima quasi? Dicta dignissimos nisi vel nemo optio qui?</p>
         </div>
         <div class="blogs blogThree">
-            Third
+            <h4>Example</h4>
+            <h2 class="striking">Example Blog Post</h2>
+            <h5>Dec/2/2020</h5>
+            <p class="randomP">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo minus est nobis tempora perspiciatis, rem natus qui, laboriosam delectus nulla aliquid minima quasi? Dicta dignissimos nisi vel nemo optio qui?</p>
         </div>
         <div class="blogs blogFour">
-            Fourth
+            <h4>Example</h4>
+            <h2 class="striking">Example Blog Post</h2>
+            <h5>Dec/2/2020</h5>
+            <p class="randomP">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo minus est nobis tempora perspiciatis, rem natus qui, laboriosam delectus nulla aliquid minima quasi? Dicta dignissimos nisi vel nemo optio qui?</p>
         </div>
         <div class="blogs blogFive">
-            Fifth
+            <h4>Example</h4>
+            <h2 class="striking">Example Blog Post</h2>
+            <h5>Dec/2/2020</h5>
+            <p class="randomP">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo minus est nobis tempora perspiciatis, rem natus qui, laboriosam delectus nulla aliquid minima quasi? Dicta dignissimos nisi vel nemo optio qui?</p>
         </div>
         <div class="blogs blogSix">
-            Sixth
+            <h4>Example</h4>
+            <h2 class="striking">Example Blog Post</h2>
+            <h5>Dec/2/2020</h5>
+            <p class="randomP">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo minus est nobis tempora perspiciatis, rem natus qui, laboriosam delectus nulla aliquid minima quasi? Dicta dignissimos nisi vel nemo optio qui?</p>
         </div>
         <div class="blogs footer">
             <footer>Footer</footer>
