had some differnet ideas, redoing everything

--- a/Blog HTML/blog.html
+++ b/Blog HTML/blog.html
@@ -8,63 +8,60 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Blog</title>
+    <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../CSS/blog.css">
 </head>
 
 <body>
-    <div>
-        <nav>
-            <ul class="header">
-                <li><a href="#">Subscribe</a></li>
-                <li class="blog-header">Blog Title</li>
-                <li><input type="Search"></li>
-            </ul>
-        </nav>
-    </div>
+    <div class="btblog">Back to blog</div>
     <div class="container">
-        <div class="blogs blogOne">
-            <h4>Example</h4>
-            <h2 class="striking">Example Blog Post</h2>
-            <h5>Dec/2/2020</h5>
-            <p class="randomP">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo minus est nobis tempora perspiciatis, rem natus qui, laboriosam delectus nulla aliquid minima quasi? Dicta dignissimos nisi vel nemo optio qui?</p>
+        <div class="author">
+            <h1>Blog Title</h1>
+            <div class="small-image">Feroj</div>
+            <div class="author-description">
+            <h4 id="authorName">Author name</h4>
+            <p id="authorDescription">Author name is Lorem Ipsum torema.</p>
+            </div>
         </div>
-        <div class="blogs blogTwo">
-            <h4>Example</h4>
-            <h2 class="striking">Example Blog Post</h2>
-            <h5>Dec/2/2020</h5>
-            <p class="randomP">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo minus est nobis tempora perspiciatis, rem natus qui, laboriosam delectus nulla aliquid minima quasi? Dicta dignissimos nisi vel nemo optio qui?</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore provident minus praesentium delectus cumque!
+            Perferendis, minus repellendus aut vitae nobis temporibus laborum corrupti quos incidunt voluptatum vero
+            quam quibusdam vel.
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adispising elit.</p>
+        <div>1000x250</div>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat, iusto! Magnam, ex! Cupiditate aspernatur
+            aliquam reprehenderit numquam veniam exercitationem velit quam. Hic nulla ipsa, magnam libero quia odio
+            officia optio?
+        </p>
+
+        <h2>Quid securi etia, tamquam eu fugiat nulla pariatur.</h2>
+        <p>example example example example.</p>
+        <div class="example">
+            article {
+            <br> display: grid;
+            <br> grid-template-columns: 1fr 1fr; <br>
+            }
         </div>
-        <div class="blogs blogThree">
-            <h4>Example</h4>
-            <h2 class="striking">Example Blog Post</h2>
-            <h5>Dec/2/2020</h5>
-            <p class="randomP">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo minus est nobis tempora perspiciatis, rem natus qui, laboriosam delectus nulla aliquid minima quasi? Dicta dignissimos nisi vel nemo optio qui?</p>
+
+        <div>
+            <ul>
+                <li>Whay is your name</li>
+                <li>Whay is your age</li>
+                <li>Whay is your gender?</li>
+            </ul>
         </div>
-        <div class="blogs blogFour">
-            <h4>Example</h4>
-            <h2 class="striking">Example Blog Post</h2>
-            <h5>Dec/2/2020</h5>
-            <p class="randomP">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo minus est nobis tempora perspiciatis, rem natus qui, laboriosam delectus nulla aliquid minima quasi? Dicta dignissimos nisi vel nemo optio qui?</p>
-        </div>
-        <div class="blogs blogFive">
-            <h4>Example</h4>
-            <h2 class="striking">Example Blog Post</h2>
-            <h5>Dec/2/2020</h5>
-            <p class="randomP">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo minus est nobis tempora perspiciatis, rem natus qui, laboriosam delectus nulla aliquid minima quasi? Dicta dignissimos nisi vel nemo optio qui?</p>
-        </div>
-        <div class="blogs blogSix">
-            <h4>Example</h4>
-            <h2 class="striking">Example Blog Post</h2>
-            <h5>Dec/2/2020</h5>
-            <p class="randomP">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo minus est nobis tempora perspiciatis, rem natus qui, laboriosam delectus nulla aliquid minima quasi? Dicta dignissimos nisi vel nemo optio qui?</p>
-        </div>
-        <div class="blogs footer">
-            <footer>Footer</footer>
+        <div>
+            <ul>
+                <li>I love coding</li>
+                <li>I love coding</li>
+                <li>I love coding</li>
+            </ul>
         </div>
     </div>
 </body>
 
 </html>
+
